--- a/CSE 20 - Intro Discrete Mathematics - Winter 2020/Week 1/Lec1_01062020.md
+++ b/CSE 20 - Intro Discrete Mathematics - Winter 2020/Week 1/Lec1_01062020.md
@@ -1,2 +1,18 @@
 # Lec 1 - 01/06/2020
 ### Sameera Rajaratne
+
+An algorithm is a __finite__ sequence of __precise__ instructions for __correctly__ performing a computation or for solving a problem.
+
+Question you need to ask about your algorithm:
+
+1. Is my algorithm well-defined / definite?
+
+2. Will I stop after a finite amount of steps?
+
+3. Is the answer (output) correct?
+
+Think of algorithms as a blackbox.
+
+__Stable Matching__
+
+A matching such that, in the end, everyone is happy with their partner.
